--- a/test/ll.css
+++ b/test/ll.css
@@ -187,6 +187,10 @@ nav > ul li:hover .dropdown-content
     margin-top: 5px;
     margin-bottom: auto;
 } */
+
+
+/*******/
+/*ANIMALS*/
 ol{
     padding-bottom: 65px;
 }
@@ -249,6 +253,69 @@ ol div img:hover
     opacity: 0.65;
 }
 
+
+/********/
+/*A Vous De Jouer*/
+
+#audioplayer{
+    margin-bottom: 5px;
+}
+
+/* Customize the label (the container) */
+.container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default checkbox */
+  .container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    margin-bottom: 12px;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .container:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+
+  .container input:checked ~ .checkmark {
+    background-color: #2196F3;
+  }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+
+
+
+
+/******/
 /* The Modal (background) */
 /* .modal { */
     /* display: none; /*Hidden by default */
@@ -312,7 +379,13 @@ ol div img:hover
     font-weight: bold;
     transition: 0.3s;
   } */
+ 
   
+
+
+
+
+
 /*CREATORS*/
 #photos_creators
 {
@@ -336,6 +409,9 @@ ol div img:hover
     margin-right: 10px;
     border-radius: 15px;
 }
+
+
+
 
 /***********/
 /*FOOTER*/
